@@ -45,6 +45,7 @@ timebuild=net.sourceforge.cruisecontrol.sourcecontrols.TimeBuild
 triggers=net.sourceforge.cruisecontrol.sourcecontrols.Triggers
 targets=net.sourceforge.cruisecontrol.sourcecontrols.Targets
 ucm=net.sourceforge.cruisecontrol.sourcecontrols.UCM
+veto=net.sourceforge.cruisecontrol.sourcecontrols.Veto
 vss=net.sourceforge.cruisecontrol.sourcecontrols.Vss
 vssjournal=net.sourceforge.cruisecontrol.sourcecontrols.VssJournal
 
